--- a/src/app/admin/target-achiever/target-achiever.component.html
+++ b/src/app/admin/target-achiever/target-achiever.component.html
@@ -60,23 +60,32 @@
               </ng-container>
 
               <ng-container matColumnDef="target">
-                <th scope="col" mat-header-cell *matHeaderCellDef>Target</th>
+                <th class="text-center" scope="col" mat-header-cell *matHeaderCellDef>Target</th>
                 <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">
-                  <input type="text" class="form-control cstm-form w-50" name="target" [(ngModel)]="element.target">
+                  <div class="d-flex justify-content-center cstm-form">
+                    <div class="input-group w-50">
+                      <input type="text" class="form-control text-center" name="achiever" [(ngModel)]="element.target">
+                    </div>
+                  </div>
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="achiever">
-                <th scope="col" mat-header-cell *matHeaderCellDef>Achiever</th>
+                <th class="text-center" scope="col" mat-header-cell *matHeaderCellDef>Achiever</th>
                 <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">
-                  <input type="text" class="form-control cstm-form w-50" name="achiever" [(ngModel)]="element.achiever">
+                  <div class="d-flex justify-content-center cstm-form">
+                    <div class="input-group w-50">
+                      <input type="text" class="form-control text-center" name="achiever"
+                        [(ngModel)]="element.achiever">
+                    </div>
+                  </div>
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="action">
                 <th scope="col" mat-header-cell *matHeaderCellDef>Action</th>
                 <td mat-cell *matCellDef="let element">
-                  <button class="bg-green btn rounded-pill width-per-100 text-white font-weight-600 "
+                  <button class="bg-green btn font-weight-600 pl-4 pr-4 rounded-pill text-white"
                     (click)="updateHandler(element.action, element.target, element.achiever)">Update</button>
                 </td>
               </ng-container>
