Notification Add Template Implemented

--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -93,8 +93,8 @@
             <ng-container matColumnDef="status">
               <th scope="col" mat-header-cell *matHeaderCellDef> Status </th>
               <td mat-cell *matCellDef="let element">
-                <button class="bg-amber btn rounded-pill width-per-100 text-dark font-weight-600"
-                  (click)="element.isExpanded = !element.isExpanded">{{element.status}}</button>
+                <button
+                  class="bg-amber btn rounded-pill width-per-100 text-dark font-weight-600">{{element.status}}</button>
               </td>
             </ng-container>
 
