--- a/src/app/admin/notification/notification.component.html
+++ b/src/app/admin/notification/notification.component.html
@@ -64,16 +64,33 @@
               <ng-container matColumnDef="templateId">
                 <th class="text-center" scope="col" mat-header-cell *matHeaderCellDef>Action</th>
                 <td mat-cell *matCellDef="let element" class="font-14 font-weight-600 text-center">
-                  <!-- {{element.templateId}} -->
-                  <button class="border-0 pb-1 pl-2 pr-2 pt-1 rounded"><i
-                      class="fa fa-pen mr-2 text-dark"></i>Edit</button>
-                  <button class="border-0 pb-1 pl-2 pr-2 pt-1 rounded ml-3"><i
-                      class="fa fa-trash mr-2 text-dark"></i>Delete</button>
+                  <button class="border-0 pb-1 pl-2 pr-2 pt-1 rounded"
+                    (click)="expandedElement = expandedElement === element ? null : element">
+                    <i class="fa fa-pen mr-2 text-dark"></i>Edit
+                  </button>
+                  <button class="border-0 pb-1 pl-2 pr-2 pt-1 rounded ml-3">
+                    <i class="fa fa-trash mr-2 text-dark"></i>Delete
+                  </button>
+                </td>
+              </ng-container>
+
+              <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+              <ng-container matColumnDef="expandedDetail">
+                <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                  <div class="example-element-detail"
+                    [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                    <div class="example-element-description">
+                      <h1>Default Detail Component</h1>
+                    </div>
+                  </div>
                 </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row"
+                [class.example-expanded-row]="expandedElement === element">
+              </tr>
+              <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
             </table>
           </div>
         </form>
