Notification Template API Implemented

--- a/src/app/shared/dialog/add-template/add-template.component.html
+++ b/src/app/shared/dialog/add-template/add-template.component.html
@@ -2,7 +2,7 @@
   <div class="modal left fade" id="add_template_model" tabindex="" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <form class="h-100" [formGroup]="AddTemplateForm" (ngSubmit)="submitHandler(AddTemplateForm.valid)">
+      <form class="h-100" [formGroup]="addTemplateForm" (ngSubmit)="submitHandler(addTemplateForm.valid)">
         <div class="modal-content">
           <div class="modal-header pb-3 pt-2">
             <h4 class="font-15 text-white modal-title">Add Template</h4>
