--- a/src/app/admin/notification/notification.component.html
+++ b/src/app/admin/notification/notification.component.html
@@ -64,11 +64,11 @@
               <ng-container matColumnDef="templateId">
                 <th class="text-center" scope="col" mat-header-cell *matHeaderCellDef>Action</th>
                 <td mat-cell *matCellDef="let element" class="font-14 font-weight-600 text-center">
-                  <button class="border-0 pb-1 pl-2 pr-2 pt-1 rounded"
+                  <button class="border-0 pb-1 pl-2 pr-2 pt-1 rounded" (click)="onTableExpand(element.action)"
                     (click)="expandedElement = expandedElement === element ? null : element">
                     <i class="fa fa-pen mr-2 text-dark"></i>Edit
                   </button>
-                  <button class="border-0 pb-1 pl-2 pr-2 pt-1 rounded ml-3">
+                  <button class="border-0 pb-1 pl-2 pr-2 pt-1 rounded ml-3" (click)="deleteHandler(element.action)">
                     <i class="fa fa-trash mr-2 text-dark"></i>Delete
                   </button>
                 </td>
@@ -80,7 +80,21 @@
                   <div class="example-element-detail"
                     [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                     <div class="example-element-description">
-                      <h1>Default Detail Component</h1>
+                      <ng-container [ngSwitch]="routeData.page">
+                        <div *ngSwitchCase="'Template'" [item]="routeData">
+                          <app-notification-template [currentData]="detailComponentData"
+                            *ngIf="detailComponentData !== '' && detailComponentData === element.action ">
+                          </app-notification-template>
+                        </div>
+
+                        <div *ngSwitchCase="'Schedule'" [item]="routeData">
+                          <app-notification-schedule [currentData]="detailComponentData"
+                            *ngIf="detailComponentData !== '' && detailComponentData === element.action ">
+                          </app-notification-schedule>
+                        </div>
+
+                        <h1 *ngSwitchDefault [item]="currentItem">Default Detail Component</h1>
+                      </ng-container>
                     </div>
                   </div>
                 </td>
