--- a/src/app/basket-details/notification-template/notification-template.component.html
+++ b/src/app/basket-details/notification-template/notification-template.component.html
@@ -1,1 +1,46 @@
-<p>notification-template works!</p>
+<h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4 pt-2 pb-2">Edit Schedule</h2>
+<form [formGroup]="basketDetailForm" (ngSubmit)="submitHandler(basketDetailForm.valid)">
+  <div class="pl-4 row">
+
+    <div class="col-md-6 border-right pl-4 pr-5">
+      <div class="form-group row mt-3">
+        <label class="col-sm-3 col-form-label">Template</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" formControlName="template">
+          <div *ngIf="template.invalid && (template.dirty || template.touched)">
+            <div *ngIf="template.errors.required" class="error">Template is required</div>
+            <div *ngIf="template.errors.pattern" class="error">Invalid Template</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-3 col-form-label">Type</label>
+        <div class="col-sm-9">
+          <select class="form-control" formControlName="type">
+            <option *ngFor="let type of templateTypeList" value="{{type.value}}">{{type.option}}</option>
+          </select>
+          <div *ngIf="type.invalid && (type.dirty || type.touched)">
+            <div *ngIf="type.errors.required" class="error">Type is required</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-3 col-form-label">Remarks</label>
+        <div class="col-sm-9">
+          <textarea rows="4" cols="50" class="form-control" formControlName="message"></textarea>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="row">
+        <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
+          <button (click)="reloadHandler()" class="btn bg-transparent border-0 w-25">Cancel</button>
+          <button type="submit" class="bg-green btn text-white w-25">Update</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
