--- a/src/app/basket-details/notification-template/notification-template.component.html
+++ b/src/app/basket-details/notification-template/notification-template.component.html
@@ -1,4 +1,4 @@
-<h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4 pt-2 pb-2">Edit Schedule</h2>
+<h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4 pt-2 pb-2">Edit Messages</h2>
 <form [formGroup]="basketDetailForm" (ngSubmit)="submitHandler(basketDetailForm.valid)">
   <div class="pl-4 row">
 
