--- a/src/app/admin/target-achiever/target-achiever.component.html
+++ b/src/app/admin/target-achiever/target-achiever.component.html
@@ -83,8 +83,8 @@
               </ng-container>
 
               <ng-container matColumnDef="action">
-                <th scope="col" mat-header-cell *matHeaderCellDef>Action</th>
-                <td mat-cell *matCellDef="let element">
+                <th class="text-center" scope="col" mat-header-cell *matHeaderCellDef>Action</th>
+                <td class="text-center" mat-cell *matCellDef="let element">
                   <button class="bg-green btn font-weight-600 pl-4 pr-4 rounded-pill text-white"
                     (click)="updateHandler(element.action, element.target, element.achiever)">Update</button>
                 </td>
