--- a/src/app/admin/telemarketing/telemarketing.component.html
+++ b/src/app/admin/telemarketing/telemarketing.component.html
@@ -83,8 +83,8 @@
             </ng-container>
 
             <ng-container matColumnDef="callStatus">
-              <th scope="col" mat-header-cell *matHeaderCellDef> Call Status </th>
-              <td mat-cell *matCellDef="let element">
+              <th class="text-center" scope="col" mat-header-cell *matHeaderCellDef> Call Status </th>
+              <td class="text-center" mat-cell *matCellDef="let element">
                 <button class="btn btn-outline-dark text-dark btn-round">{{element.callStatus}}</button>
               </td>
             </ng-container>
