--- a/src/app/shared/dialog/add-template/add-template.component.html
+++ b/src/app/shared/dialog/add-template/add-template.component.html
@@ -4,7 +4,7 @@
     <div class="modal-dialog" role="document">
       <form class="h-100" [formGroup]="addTemplateForm" (ngSubmit)="submitHandler(addTemplateForm.valid)">
         <div class="modal-content">
-          <div class="modal-header pb-3 pt-2">
+          <div class="modal-header text-center d-block text-white bg-success pt-3 pb-3">
             <h4 class="font-15 text-white modal-title">Add Template</h4>
           </div>
           <div class="modal-body">
