Payment Failed Detail Component Implemented, Telemarketing Send SMS Implemented

--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -157,6 +157,12 @@
                         </app-windscreen>
                       </div>
 
+                      <div *ngSwitchCase="'Payment Failed'" [item]="routeData">
+                        <app-urgent-ncd [currentData]="detailComponentData"
+                          *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                        </app-urgent-ncd>
+                      </div>
+
                       <h1 *ngSwitchDefault [item]="currentItem">Default Detail Component</h1>
                     </ng-container>
                   </div>
