--- a/src/app/admin/telemarketing/telemarketing.component.html
+++ b/src/app/admin/telemarketing/telemarketing.component.html
@@ -1,6 +1,9 @@
 <!-- Email Modal Start -->
-<app-email [data]="emailData"></app-email>
+<app-email [data]="data"></app-email>
 <!-- Email Modal End -->
+<!-- SMS Modal Start -->
+<app-sms [data]="data"></app-sms>
+<!-- SMS Modal End -->
 
 <div class="second_top_bar bg-white p-10">
   <div class="container">
@@ -100,7 +103,7 @@
                 <div class="example-element-detail"
                   [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                   <div class="example-element-description">
-                    <app-marketing (userEmail)="addItem($event)" [currentData]="detailComponentData"
+                    <app-marketing (userData)="addData($event)" [currentData]="detailComponentData"
                       *ngIf="detailComponentData !== '' && detailComponentData === element.carRegister ">
                     </app-marketing>
                   </div>
