--- a/src/app/shared/dialog/email/email.component.html
+++ b/src/app/shared/dialog/email/email.component.html
@@ -1,5 +1,5 @@
 <div class="new_email_model">
-  <div class="modal left fade" id="new_email_Modal" tabindex="" role="dialog" aria-labelledby="exampleModalLabel"
+  <div class="modal left fade" id="new_email_Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <form class="h-100" [formGroup]="emailForm" (ngSubmit)="onSubmit(emailForm.valid)">
